--- a/welcome.html
+++ b/welcome.html
@@ -69,8 +69,8 @@
             <div class="page-heading">
               <h1>Ward 2201 </h1>
               <h2>West Mt Airy</h2> 
-              <span class="subheading">The primary vote is May 15, 2018</span>
-              <span class="subheading">2018 General Election: November 6</span>
+              <span class="subheading"></span>
+              <span class="subheading">2018 General Election: November 6, 2018</span>
             </div>
           </div>
         </div>
